--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<div id="slides">
 			<ul>
 				<li class="slide slide1">
-					<div class="img-wrapper">Read about how and why high profile companies like Twitter and the Guardian newspaper are switching to Scala.</div>
+					<div class="img-wrapper"> <a href="./why_adopt_scala.html"> Read about how and why high profile companies like Twitter and the Guardian newspaper are switching to Scala </a></div>
 				</li>
 				<li class="slide slide2">
 					<div class="img-wrapper">SwitchToScala will be presenting at Scala Lift Off @ SkillsMatter in London on October 13th 2011</div>
@@ -77,7 +77,7 @@
 		</div>
 		<div class="item">
 			<h1> Read Google's Review of Scala </h1>
-			<p>Google compares the performance of Java, Scala, Go, C++ in this free whitepaper.</p>
+			<p>Google compares the performance of Java, Scala, Go, C++ in this <a href="https://days2011.scala-lang.org/sites/days2011/files/ws3-1-Hundt.pdf">free whitepaper</a></p>
 			<p>Scala beats Java on runtime, and it had a smaller code size and a smaller memory footprint. "Scala['s] concise notation and powerful language features allowed for the best optimization of code complexity,".</p>
 		</div>
 	</div>
