more spelling corrections

--- a/about_us.html
+++ b/about_us.html
@@ -35,8 +35,8 @@
 			<li> Rapid development without sacrificing on performance and scalability. This was something lacking from a lot of other solutions, which had developer mailing lists with many questions about tackling basic scalability issues.</li>
 			</ul>
 			<p> From this point onwards (2009) our team have worked 100% exclusively in Scala building bespoke applications for offshore gaming operators and developing our own gaming platform in Scala.</p>
-			<p> We belive that Scala and Scala open source projects will in time be adopted by most large Java development teams.</p>
-			<p> We want to help Scala's growth by ensuring that companies first steps in Scala are sucessful.</p>
+			<p> We believe that Scala and Scala open source projects will in time be adopted by most large Java development teams.</p>
+			<p> We want to help Scala's growth by ensuring that companies first steps in Scala are successful.</p>
 			
 			<h2> Join us at the Scala Lift Off</h2>
 			<p> We are delighted to have been invited to speak at the Scala Lift Off - on October 13th @ Skills Matter in London.
