--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 		<div class="item">
 			<h2>We can show you how to get more from your Java developerment team by switching to Scala</h2>
 			<p><b>LESS CODE => FEWER BUGS => LESS TIME => LOWER COST</b></p> 
-			<p>Our team mentors companies in how to adpot Scala into their business to reduce costs and gain a competitive advantage. 
+			<p>Our team mentors companies in how to adopt Scala into their business to reduce costs and gain a competitive advantage. 
 			<br>We support and upskill our clients' existing in-house Java development teams while they adopt Scala in projects such as:
 			<ul>
 				<li>Application Development </li>
 				<li>Mobile Development </li>
-				<li>High Performance Distrbuted Computing </li>
+				<li>High Performance Distributed Computing </li>
 				<li>Domain Specific Language Creation </li>
 				<li>NOSQL Adoption </li>
 			</ul>
