--- a/why_adopt_scala.html
+++ b/why_adopt_scala.html
@@ -51,16 +51,16 @@ Concise languages like Scala allow programmers to focus on the core logic, leavi
 
     <li>Scala has full interoperability from and to Java. This also includes full interoperability with Java's libraries and frameworks (J2EE, servlets, JMS etc)</li>
 
-    <li>Scala is fast, in benchmarks performed by Google Inc. outperforming equivelent Java code</li>
+    <li>Scala is fast, in benchmarks performed by Google Inc. outperforming equivalent Java code</li>
    </ul>
 
-  <p> For a Java developer when comparing Scala against a different modern development platform like Python or Ruby on Rails there is much less cluture shock:
+  <p> For a Java developer when comparing Scala against a different modern development platform like Python or Ruby on Rails there is much less culture shock:
   <ul>
     <li>You can use the same libraries and IDE</li>
     <li>The way you package jars and wars is the same </li>
     <li>Scala's runtime environment and runtime characteristics are the same </li>
    </ul>
-    <p>So an experienced Java developer can learn to write Java-style code in Scala in a day, then over time learn to utilize features from Scala's powerful language features not present in Java.</p>
+    <p>So an experienced Java developer can learn to write Java-style code in Scala in a day, then over time learn to utilize Scala's powerful language features not present in Java.</p>
 		</div>
 	</div>
 
@@ -79,7 +79,7 @@ Concise languages like Scala allow programmers to focus on the core logic, leavi
                 <div class="item">
 			<h1> Read Google's Review of Scala </h1>
 			<p>Google compares the performance of Java, Scala, Go, C++ in this <a href="https://days2011.scala-lang.org/sites/days2011/files/ws3-1-Hundt.pdf">free whitepaper</a></p>
-			<p>Scala beats Java on runtime, and it had a smaller code size and a smaller memory footprint. "Scala['s] concise notation and powerful language features allowed for the best optimization of code complexity,".</p>
+			<p>Scala beats Java on runtime, and it had a smaller code size and a smaller memory footprint. "Scala's concise notation and powerful language features allowed for the best optimization of code complexity,".</p>
 		</div>
 	</div>
 ~                
