--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
 
 	<div id="lower" class="content">
 		<div class="item">
-			<h1> Why Scala?</h1>
+			<h1>Why Scala?</h1>
 			<p>"Why should my developers learn and use a new technology? We already have a language that works.."</p>
 			<p>We were Java engineers, but we adopted Scala to deliver applications more quickly and at lower cost. Scala code on average is about 3 times shorter than the equivalent Java, without losing performance or scalability.</p>
 		
 		</div>
 		<div class="item">
-			<h1> How to Adopt Scala</h1>
+			<h1>How to Adopt Scala</h1>
 			<p>An experienced Java Developer can begin writing Java-like Scala within one day. </p>
 <p>If you develop in Java then you will feel immediately at home with Scala. You can use the same libraries and IDE, the way you package jars and wars is the same and your runtime environment is also the same.</p>
 		</div>
 		<div class="item">
-			<h1> Read Google's Review of Scala </h1>
-			<p>Google compares the performance of Java, Scala, Go, C++ in this <a href="https://days2011.scala-lang.org/sites/days2011/files/ws3-1-Hundt.pdf">free whitepaper</a></p>
+			<h1>Read Google's Review of Scala </h1>
+			<p>Google compares the performance of Java, Scala, Go, C++ in this <br><a href="https://days2011.scala-lang.org/sites/days2011/files/ws3-1-Hundt.pdf">free whitepaper</a></p>
 			<p>Scala beats Java on runtime, and it had a smaller code size and a smaller memory footprint. "Scala['s] concise notation and powerful language features allowed for the best optimization of code complexity,".</p>
 		</div>
 	</div>
